--- a/index.html
+++ b/index.html
@@ -18,12 +18,13 @@
 </header>
 <main>
 	<div id="banner">
-		<div class="tagLine"><p></p></div>
-		<img class="arrow arrow_left" src="assets/images/arrow_left.png" alt="arrow-left">
-		<img class="arrow arrow_right" src="assets/images/arrow_right.png" alt="arrow_right">
+		<div class="tagline"><p></p></div>
+		<img class="arrow_left" src="assets/images/arrow_left.png" alt="arrow_left">
+		<img class="arrow_right" src="assets/images/arrow_right.png" alt="arrow_right">
+		<img src="" alt="">
 		<img class="banner-img" src="./assets/images/slideshow/slide1.jpg" alt="Banner Print-it">
 		<div class="dots">
-			<div class="dot dot_selected"></div>
+			<div class="dot"></div>
 			<div class="dot"></div>
 			<div class="dot"></div>
 			<div class="dot"></div>
